--- a/gb/21/12/10/n13428240.md
+++ b/gb/21/12/10/n13428240.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yjnkcd3462/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yjnkcd3462/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yjnkcd3462/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>抵制冬奥遭威胁 澳防长：侵犯人权不能忽视</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13240216-GettyImages-1235300354-1-600x400.jpg" />
 <h6>国防部长达顿12月10日表示，人们不能再对中共侵犯人权的行为“视而不见”。图为澳洲国防部长达顿档案照。（ANDREW HARNIK/POOL/AFP via Getty Images）
 </h6>
 <hr>
-<p>【大纪元2021年12月10日讯】（大纪元记者陈光<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）面对中共当局的威胁——<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E6%8A%B5%E5%88%B6%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5.md#1">抵制北京冬奥</a>，要“付出代价”，澳洲<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E8%BE%BE%E9%A1%BF.md#1">国防部长达顿</a>（Peter Dutton）周五（12月10日）表示，人们不能再对<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E4%BE%B5%E7%8A%AF%E4%BA%BA%E6%9D%83.md#1">侵犯人权</a>的行为“视而不见”。</p>
-<p>在<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>与美国、英国和加拿大纷纷宣布将外交抵制北京2022年冬季奥运会后，中共外交部发言人汪文斌在周四的新闻发布会上称，抵制冬奥会的国家都要为之付出代价。</p>
+<p>【大纪元2021年12月10日讯】（大纪元记者陈光<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）面对中共当局的威胁——<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%B5%E5%88%B6%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5.md#1">抵制北京冬奥</a>，要“付出代价”，澳洲<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E8%BE%BE%E9%A1%BF.md#1">国防部长达顿</a>（Peter Dutton）周五（12月10日）表示，人们不能再对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BE%B5%E7%8A%AF%E4%BA%BA%E6%9D%83.md#1">侵犯人权</a>的行为“视而不见”。</p>
+<p>在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>与美国、英国和加拿大纷纷宣布将外交抵制北京2022年冬季奥运会后，中共外交部发言人汪文斌在周四的新闻发布会上称，抵制冬奥会的国家都要为之付出代价。</p>
 <p>“美国、英国、澳大利亚和加拿大是利用奥运平台进行政治操纵”，他说，并威胁“他们将为自己的错误举动付出代价。”</p>
 <p>但目前尚不清楚这个“代价”是什么，汪文斌没有直接回答中共这种反应会带来什么的问题。</p>
-<p>周五早上，澳洲<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E8%BE%BE%E9%A1%BF.md#1">国防部长达顿</a>接受了九号电视台《今日》（Today）节目的采访。当被问及澳洲因中共<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E4%BE%B5%E7%8A%AF%E4%BA%BA%E6%9D%83.md#1">侵犯人权</a>而决定外交<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E6%8A%B5%E5%88%B6%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5.md#1">抵制北京冬奥</a>会的问题时，他说：“我认为人们不能再对我们在维吾尔人身上看到的侵犯人权的行为视而不见。”</p>
+<p>周五早上，澳洲<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E8%BE%BE%E9%A1%BF.md#1">国防部长达顿</a>接受了九号电视台《今日》（Today）节目的采访。当被问及澳洲因中共<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BE%B5%E7%8A%AF%E4%BA%BA%E6%9D%83.md#1">侵犯人权</a>而决定外交<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%B5%E5%88%B6%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5.md#1">抵制北京冬奥</a>会的问题时，他说：“我认为人们不能再对我们在维吾尔人身上看到的侵犯人权的行为视而不见。”</p>
 <p>他还说，在中国的国际网球明星彭帅发微博说自已遭到中共高官性侵和强奸后，她的社交媒体账户被删除，人被软禁，露面是按照剧本作秀，“我不认为这是可以接受的。”</p>
 <p>本周三，澳洲总理莫里森宣布，由于中共政府对人权的侵犯以及澳中紧张局势的加剧，澳洲将跟随美国的步伐，不派任何政府官员和外交人员参加北京冬奥会。</p>
 <p>莫里森说，?一段时间以来，澳洲向中共提出了一些中共“不欢迎”的问题，如新疆人权侵犯问题等，“我们提出的问题也没有得到很好的回应” ，“我们之间在这些问题上一直存在分歧”，因此，澳洲政府官员不出席这一赛事也就“不足为奇”。</p>
@@ -28,47 +28,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/8/10/n13151088.md#1">澳洲议员联署促政府外交抵制北京冬奥会</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/11/22/n13390822.md#1">澳议员：是否参加北京冬奥会是道德抉择</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/11/23/n13392806.md#1">澳人权组织质问中共：为何不让彭帅接受采访</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/11/25/n13396822.md#1">澳洲考虑不派政府官员出席北京冬奥会</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/12/4/n13416485.md#1">抵制北京冬奥 20国拒签奥运休战协议</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/12/7/n13420969.md#1">澳参议员吁效仿美国 外交抵制北京冬奥会</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/12/7/n13422753.md#1">消息：澳大利亚将不派官员参加北京冬奥会</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/12/8/n13422967.md#1">响应盟友呼吁 澳总理：外交抵制北京冬奥</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/9/n13632759.md#1">澳总理宣布第二轮价值数千万洪灾补贴计划</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/9/n13632593.md#1">受洪水污染 悉尼港海水变褐 大部分海滩关闭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/10/n13151088.md#1">澳洲议员联署促政府外交抵制北京冬奥会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/22/n13390822.md#1">澳议员：是否参加北京冬奥会是道德抉择</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/23/n13392806.md#1">澳人权组织质问中共：为何不让彭帅接受采访</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/25/n13396822.md#1">澳洲考虑不派政府官员出席北京冬奥会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/4/n13416485.md#1">抵制北京冬奥 20国拒签奥运休战协议</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/7/n13420969.md#1">澳参议员吁效仿美国 外交抵制北京冬奥会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/7/n13422753.md#1">消息：澳大利亚将不派官员参加北京冬奥会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/8/n13422967.md#1">响应盟友呼吁 澳总理：外交抵制北京冬奥</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680115.md#1">洪水升级 新州局部地区逾六千居民被令撤离</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680324.md#1">澳洲首试马格尼茨基人权法 39名俄罗斯人被制裁</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank">制裁迫害法轮功者 美国政要支持采取行动</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/9/n13633746.md#1">【新闻大家谈】俄乌停火3要素 世界格局重组？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13631558.md#1">【新闻看点】俄安全官员通话被窃听 自认必败？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13630916.md#1">【方菲访谈】程晓农：从铁链女看中共社会溃烂?</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/2/n13615256.md#1">在Costco买新鲜食物存冰箱 营养师推荐5种</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13629038.md#1">网络流出俄情报机构报告：对乌战争无胜算</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/26/n13607564.md#1">【思想领袖】马龙：打疫苗越多 为何感染风险越大</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13629675.md#1">大S徐熙媛与“酷龙”具俊晔续前缘 宣布结婚</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13629278.md#1">客串韩剧演大妈？ 范冰冰憔悴落魄造型曝光</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13629121.md#1">声援铁链女 中国导演胡雪杨发布同类题材新片</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13628596.md#1">对抗皮肤老化的5个天然良方</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13626183.md#1">生活中霉菌别小觑 可增加疾病风险 如何去除</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13630345.md#1">为何有些航空公司不使用空桥让乘客登机？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13630823.md#1">【健康1+1】真人试验：注入新冠病毒 50%人为何不感染</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yjnkcd3462/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yjnkcd3462/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/10/n13428240.htm">抵制冬奥遭威胁 澳防长：侵犯人权不能忽视</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/10/n13428240.htm">抵制冬奥遭威胁 澳防长：侵犯人权不能忽视</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yjnkcd3462/djy/blob/master/gb/21/12/10/n13428240.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yjnkcd3462/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yjnkcd3462/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/12/10/n13428240.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
